src/test/resources/invalid/shellSyntaxErr/sequence/doubleSeq.wacc
# missing sequential composition

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

  skip;;
  skip 
